# ronomepo

./: .gitignore  Cargo.toml  README.md
docs/: REPO_MANIFEST_SPEC.md  repo-manifest.schema.json
examples/sample-subrepo/: ronomepo.repo.json
examples/sample-workspace/: ronomepo.json
ronomepo-app/: Cargo.toml
ronomepo-app/src/: main.rs
ronomepo-core/: Cargo.toml
ronomepo-core/src/: lib.rs
ronomepo-plugin/: Cargo.toml
ronomepo-plugin/src/: lib.rs
