[package]
name = "ronomepo-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9" }
maruzzella_sdk = { path = "../../maruzzella/maruzzella_sdk" }
ronomepo-core = { path = "../ronomepo-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

