[package]
name = "ronomepo-plugin"
version = "0.1.0"
edition = "2021"

[features]
default = ["embedded-terminal"]
embedded-terminal = ["dep:vte4"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
gtk = { package = "gtk4", version = "0.9" }
maruzzella_sdk = { path = "../../maruzzella/maruzzella_sdk" }
notify = "6"
ronomepo-core = { path = "../ronomepo-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vte4 = { version = "0.8", optional = true }
